parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID np_program SEMICOLON variables functions MAIN np_main L_PAREN R_PAREN block np_endProgram empty
Rule 2     variables -> VARIABLES variablesU
Rule 3     variables -> empty
Rule 4     variablesU -> variablesD
Rule 5     variablesU -> empty
Rule 6     variablesD -> ID np_addVariableToStack COMA variablesD
Rule 7     variablesD -> ID COLON var_type np_addVariable SEMICOLON variablesU
Rule 8     variablesD -> ID L_BRACKET INTVAL R_BRACKET COLON var_type np_addArray SEMICOLON variablesU
Rule 9     functions -> functionsU
Rule 10    functions -> empty
Rule 11    functionsU -> func_type FUNCTION ID np_addFunction L_PAREN receive_params R_PAREN variables block np_endFunction functionsD
Rule 12    functionsD -> functions
Rule 13    functionsD -> empty
Rule 14    func_type -> INT empty
Rule 15    func_type -> FLOAT empty
Rule 16    func_type -> CHAR empty
Rule 17    func_type -> VOID empty
Rule 18    var_type -> INT empty
Rule 19    var_type -> FLOAT empty
Rule 20    var_type -> CHAR empty
Rule 21    receive_params -> ID COLON var_type np_receiveParams receive_paramsD empty
Rule 22    receive_params -> empty
Rule 23    receive_paramsD -> COMA receive_params empty
Rule 24    receive_paramsD -> empty
Rule 25    send_params -> hyper_exp np_sentParam send_paramsD empty
Rule 26    send_params -> empty
Rule 27    send_paramsD -> COMA send_params empty
Rule 28    send_paramsD -> empty
Rule 29    block -> L_BRACE blockU R_BRACE empty
Rule 30    blockU -> statement blockD np_emptyStacks empty
Rule 31    blockU -> empty
Rule 32    blockD -> blockU empty
Rule 33    blockD -> empty
Rule 34    statement -> assignment SEMICOLON empty
Rule 35    statement -> call np_isStatement SEMICOLON empty
Rule 36    statement -> return SEMICOLON empty
Rule 37    statement -> read SEMICOLON empty
Rule 38    statement -> write SEMICOLON empty
Rule 39    statement -> decision empty
Rule 40    statement -> conditional empty
Rule 41    statement -> non_conditional empty
Rule 42    statement -> empty
Rule 43    assignment -> ID np_addID EQUAL np_addOperator hyper_exp np_assignment empty
Rule 44    assignment -> ID L_BRACKET np_fakeBottom hyper_exp R_BRACKET np_addArrayID EQUAL np_addOperator hyper_exp np_assignment empty
Rule 45    call -> ID np_call_era L_PAREN send_params np_paramValidation R_PAREN np_call_gosub empty
Rule 46    return -> RETURN L_PAREN hyper_exp np_return R_PAREN empty
Rule 47    read -> READ L_PAREN ID np_read R_PAREN empty
Rule 48    write -> WRITE L_PAREN writeD R_PAREN empty
Rule 49    writeD -> hyper_exp np_write empty
Rule 50    writeD -> STRING np_string empty
Rule 51    decision -> IF L_PAREN hyper_exp R_PAREN np_startDecision THEN block decisionU np_endDecision empty
Rule 52    decisionU -> ELSE np_startDecisionElse block empty
Rule 53    decisionU -> empty
Rule 54    conditional -> WHILE L_PAREN np_conditionalBefore hyper_exp np_conditionalDuring R_PAREN DO block np_conditionalAfter empty
Rule 55    non_conditional -> FROM L_PAREN for_assignment R_PAREN TO hyper_exp np_boolFor DO block np_endCondition empty
Rule 56    for_assignment -> ID np_addIDFor EQUAL np_addOperator hyper_exp np_for_assignment empty
Rule 57    operatorA -> PLUS np_addOperator empty
Rule 58    operatorA -> MINUS np_addOperator empty
Rule 59    operatorT -> MULT np_addOperator empty
Rule 60    operatorT -> DIV np_addOperator empty
Rule 61    operatorL -> OR np_addOperator empty
Rule 62    operatorL -> AND np_addOperator empty
Rule 63    operatorR -> LESS np_addOperator empty
Rule 64    operatorR -> GREATER np_addOperator empty
Rule 65    operatorR -> LESSEQUAL np_addOperator empty
Rule 66    operatorR -> GREATEREQUAL np_addOperator empty
Rule 67    operatorR -> EQUALTO np_addOperator empty
Rule 68    operatorR -> DIFF np_addOperator empty
Rule 69    hyper_exp -> super_exp np_doHyperExp hyper_expU
Rule 70    hyper_expU -> operatorL hyper_exp empty
Rule 71    hyper_expU -> empty
Rule 72    super_exp -> exp np_doSuperExp super_expU
Rule 73    super_expU -> operatorR super_exp empty
Rule 74    super_expU -> empty
Rule 75    exp -> term np_doExp expU
Rule 76    expU -> operatorA exp
Rule 77    expU -> empty
Rule 78    term -> factor np_doTerm termU
Rule 79    termU -> operatorT term
Rule 80    termU -> empty
Rule 81    factor -> varcte empty
Rule 82    factor -> call np_isExpression empty
Rule 83    factor -> L_PAREN hyper_exp R_PAREN empty
Rule 84    varcte -> ID np_addID empty
Rule 85    varcte -> ID L_BRACKET np_fakeBottom hyper_exp R_BRACKET np_addArrayID empty
Rule 86    varcte -> INTVAL np_addConstInt empty
Rule 87    varcte -> FLOATVAL np_addConstFloat empty
Rule 88    varcte -> CHARVAL np_addConstChar empty
Rule 89    empty -> <empty>
Rule 90    np_program -> <empty>
Rule 91    np_endProgram -> <empty>
Rule 92    np_addFunction -> <empty>
Rule 93    np_endFunction -> <empty>
Rule 94    np_main -> <empty>
Rule 95    np_addVariable -> <empty>
Rule 96    np_addVariableToStack -> <empty>
Rule 97    np_addArray -> <empty>
Rule 98    np_addID -> <empty>
Rule 99    np_fakeBottom -> <empty>
Rule 100   np_addArrayID -> <empty>
Rule 101   np_addConstInt -> <empty>
Rule 102   np_addConstFloat -> <empty>
Rule 103   np_addConstChar -> <empty>
Rule 104   np_call_era -> <empty>
Rule 105   np_call_gosub -> <empty>
Rule 106   np_isStatement -> <empty>
Rule 107   np_isExpression -> <empty>
Rule 108   np_addOperator -> <empty>
Rule 109   np_doTerm -> <empty>
Rule 110   np_doExp -> <empty>
Rule 111   np_doSuperExp -> <empty>
Rule 112   np_doHyperExp -> <empty>
Rule 113   np_assignment -> <empty>
Rule 114   np_read -> <empty>
Rule 115   np_write -> <empty>
Rule 116   np_string -> <empty>
Rule 117   np_return -> <empty>
Rule 118   np_startDecision -> <empty>
Rule 119   np_startDecisionElse -> <empty>
Rule 120   np_endDecision -> <empty>
Rule 121   np_conditionalBefore -> <empty>
Rule 122   np_conditionalDuring -> <empty>
Rule 123   np_conditionalAfter -> <empty>
Rule 124   np_addIDFor -> <empty>
Rule 125   np_for_assignment -> <empty>
Rule 126   np_boolFor -> <empty>
Rule 127   np_endCondition -> <empty>
Rule 128   np_sentParam -> <empty>
Rule 129   np_receiveParams -> <empty>
Rule 130   np_paramValidation -> <empty>
Rule 131   np_emptyStacks -> <empty>
Rule 132   notifError -> <empty>

Terminals, with rules where they appear

AND                  : 62
CHAR                 : 16 20
CHARVAL              : 88
COLON                : 7 8 21
COMA                 : 6 23 27
DIFF                 : 68
DIV                  : 60
DO                   : 54 55
ELSE                 : 52
EQUAL                : 43 44 56
EQUALTO              : 67
FLOAT                : 15 19
FLOATVAL             : 87
FROM                 : 55
FUNCTION             : 11
GREATER              : 64
GREATEREQUAL         : 66
ID                   : 1 6 7 8 11 21 43 44 45 47 56 84 85
IF                   : 51
INT                  : 14 18
INTVAL               : 8 86
LESS                 : 63
LESSEQUAL            : 65
L_BRACE              : 29
L_BRACKET            : 8 44 85
L_PAREN              : 1 11 45 46 47 48 51 54 55 83
MAIN                 : 1
MINUS                : 58
MULT                 : 59
OR                   : 61
PLUS                 : 57
PROGRAM              : 1
READ                 : 47
RETURN               : 46
R_BRACE              : 29
R_BRACKET            : 8 44 85
R_PAREN              : 1 11 45 46 47 48 51 54 55 83
SEMICOLON            : 1 7 8 34 35 36 37 38
STRING               : 50
THEN                 : 51
TO                   : 55
VARIABLES            : 2
VOID                 : 17
WHILE                : 54
WRITE                : 48
error                : 

Nonterminals, with rules where they appear

assignment           : 34
block                : 1 11 51 52 54 55
blockD               : 30
blockU               : 29 32
call                 : 35 82
conditional          : 40
decision             : 39
decisionU            : 51
empty                : 1 3 5 10 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 70 71 73 74 77 80 81 82 83 84 85 86 87 88
exp                  : 72 76
expU                 : 75
factor               : 78
for_assignment       : 55
func_type            : 11
functions            : 1 12
functionsD           : 11
functionsU           : 9
hyper_exp            : 25 43 44 44 46 49 51 54 55 56 70 83 85
hyper_expU           : 69
non_conditional      : 41
notifError           : 
np_addArray          : 8
np_addArrayID        : 44 85
np_addConstChar      : 88
np_addConstFloat     : 87
np_addConstInt       : 86
np_addFunction       : 11
np_addID             : 43 84
np_addIDFor          : 56
np_addOperator       : 43 44 56 57 58 59 60 61 62 63 64 65 66 67 68
np_addVariable       : 7
np_addVariableToStack : 6
np_assignment        : 43 44
np_boolFor           : 55
np_call_era          : 45
np_call_gosub        : 45
np_conditionalAfter  : 54
np_conditionalBefore : 54
np_conditionalDuring : 54
np_doExp             : 75
np_doHyperExp        : 69
np_doSuperExp        : 72
np_doTerm            : 78
np_emptyStacks       : 30
np_endCondition      : 55
np_endDecision       : 51
np_endFunction       : 11
np_endProgram        : 1
np_fakeBottom        : 44 85
np_for_assignment    : 56
np_isExpression      : 82
np_isStatement       : 35
np_main              : 1
np_paramValidation   : 45
np_program           : 1
np_read              : 47
np_receiveParams     : 21
np_return            : 46
np_sentParam         : 25
np_startDecision     : 51
np_startDecisionElse : 52
np_string            : 50
np_write             : 49
operatorA            : 76
operatorL            : 70
operatorR            : 73
operatorT            : 79
program              : 0
read                 : 37
receive_params       : 11 23
receive_paramsD      : 21
return               : 36
send_params          : 27 45
send_paramsD         : 25
statement            : 30
super_exp            : 69 73
super_expU           : 72
term                 : 75 79
termU                : 78
var_type             : 7 8 21
varcte               : 81
variables            : 1 11
variablesD           : 4 6
variablesU           : 2 7 8
write                : 38
writeD               : 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID np_program SEMICOLON variables functions MAIN np_main L_PAREN R_PAREN block np_endProgram empty

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID np_program SEMICOLON variables functions MAIN np_main L_PAREN R_PAREN block np_endProgram empty

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . np_program SEMICOLON variables functions MAIN np_main L_PAREN R_PAREN block np_endProgram empty
    (90) np_program -> .

    SEMICOLON       reduce using rule 90 (np_program -> .)

    np_program                     shift and go to state 4

state 4

    (1) program -> PROGRAM ID np_program . SEMICOLON variables functions MAIN np_main L_PAREN R_PAREN block np_endProgram empty

    SEMICOLON       shift and go to state 5


state 5

    (1) program -> PROGRAM ID np_program SEMICOLON . variables functions MAIN np_main L_PAREN R_PAREN block np_endProgram empty
    (2) variables -> . VARIABLES variablesU
    (3) variables -> . empty
    (89) empty -> .

    VARIABLES       shift and go to state 8
    INT             reduce using rule 89 (empty -> .)
    FLOAT           reduce using rule 89 (empty -> .)
    CHAR            reduce using rule 89 (empty -> .)
    VOID            reduce using rule 89 (empty -> .)
    MAIN            reduce using rule 89 (empty -> .)

    variables                      shift and go to state 6
    empty                          shift and go to state 7

state 6

    (1) program -> PROGRAM ID np_program SEMICOLON variables . functions MAIN np_main L_PAREN R_PAREN block np_endProgram empty
    (9) functions -> . functionsU
    (10) functions -> . empty
    (11) functionsU -> . func_type FUNCTION ID np_addFunction L_PAREN receive_params R_PAREN variables block np_endFunction functionsD
    (89) empty -> .
    (14) func_type -> . INT empty
    (15) func_type -> . FLOAT empty
    (16) func_type -> . CHAR empty
    (17) func_type -> . VOID empty

    MAIN            reduce using rule 89 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15
    VOID            shift and go to state 16

    functions                      shift and go to state 9
    empty                          shift and go to state 10
    functionsU                     shift and go to state 11
    func_type                      shift and go to state 12

state 7

    (3) variables -> empty .

    INT             reduce using rule 3 (variables -> empty .)
    FLOAT           reduce using rule 3 (variables -> empty .)
    CHAR            reduce using rule 3 (variables -> empty .)
    VOID            reduce using rule 3 (variables -> empty .)
    MAIN            reduce using rule 3 (variables -> empty .)
    L_BRACE         reduce using rule 3 (variables -> empty .)


state 8

    (2) variables -> VARIABLES . variablesU
    (4) variablesU -> . variablesD
    (5) variablesU -> . empty
    (6) variablesD -> . ID np_addVariableToStack COMA variablesD
    (7) variablesD -> . ID COLON var_type np_addVariable SEMICOLON variablesU
    (8) variablesD -> . ID L_BRACKET INTVAL R_BRACKET COLON var_type np_addArray SEMICOLON variablesU
    (89) empty -> .

    ID              shift and go to state 20
    INT             reduce using rule 89 (empty -> .)
    FLOAT           reduce using rule 89 (empty -> .)
    CHAR            reduce using rule 89 (empty -> .)
    VOID            reduce using rule 89 (empty -> .)
    MAIN            reduce using rule 89 (empty -> .)
    L_BRACE         reduce using rule 89 (empty -> .)

    variablesU                     shift and go to state 17
    variablesD                     shift and go to state 18
    empty                          shift and go to state 19

state 9

    (1) program -> PROGRAM ID np_program SEMICOLON variables functions . MAIN np_main L_PAREN R_PAREN block np_endProgram empty

    MAIN            shift and go to state 21


state 10

    (10) functions -> empty .

    MAIN            reduce using rule 10 (functions -> empty .)


state 11

    (9) functions -> functionsU .

    MAIN            reduce using rule 9 (functions -> functionsU .)


state 12

    (11) functionsU -> func_type . FUNCTION ID np_addFunction L_PAREN receive_params R_PAREN variables block np_endFunction functionsD

    FUNCTION        shift and go to state 22


state 13

    (14) func_type -> INT . empty
    (89) empty -> .

    FUNCTION        reduce using rule 89 (empty -> .)

    empty                          shift and go to state 23

state 14

    (15) func_type -> FLOAT . empty
    (89) empty -> .

    FUNCTION        reduce using rule 89 (empty -> .)

    empty                          shift and go to state 24

state 15

    (16) func_type -> CHAR . empty
    (89) empty -> .

    FUNCTION        reduce using rule 89 (empty -> .)

    empty                          shift and go to state 25

state 16

    (17) func_type -> VOID . empty
    (89) empty -> .

    FUNCTION        reduce using rule 89 (empty -> .)

    empty                          shift and go to state 26

state 17

    (2) variables -> VARIABLES variablesU .

    INT             reduce using rule 2 (variables -> VARIABLES variablesU .)
    FLOAT           reduce using rule 2 (variables -> VARIABLES variablesU .)
    CHAR            reduce using rule 2 (variables -> VARIABLES variablesU .)
    VOID            reduce using rule 2 (variables -> VARIABLES variablesU .)
    MAIN            reduce using rule 2 (variables -> VARIABLES variablesU .)
    L_BRACE         reduce using rule 2 (variables -> VARIABLES variablesU .)


state 18

    (4) variablesU -> variablesD .

    INT             reduce using rule 4 (variablesU -> variablesD .)
    FLOAT           reduce using rule 4 (variablesU -> variablesD .)
    CHAR            reduce using rule 4 (variablesU -> variablesD .)
    VOID            reduce using rule 4 (variablesU -> variablesD .)
    MAIN            reduce using rule 4 (variablesU -> variablesD .)
    L_BRACE         reduce using rule 4 (variablesU -> variablesD .)


state 19

    (5) variablesU -> empty .

    INT             reduce using rule 5 (variablesU -> empty .)
    FLOAT           reduce using rule 5 (variablesU -> empty .)
    CHAR            reduce using rule 5 (variablesU -> empty .)
    VOID            reduce using rule 5 (variablesU -> empty .)
    MAIN            reduce using rule 5 (variablesU -> empty .)
    L_BRACE         reduce using rule 5 (variablesU -> empty .)


state 20

    (6) variablesD -> ID . np_addVariableToStack COMA variablesD
    (7) variablesD -> ID . COLON var_type np_addVariable SEMICOLON variablesU
    (8) variablesD -> ID . L_BRACKET INTVAL R_BRACKET COLON var_type np_addArray SEMICOLON variablesU
    (96) np_addVariableToStack -> .

    COLON           shift and go to state 28
    L_BRACKET       shift and go to state 29
    COMA            reduce using rule 96 (np_addVariableToStack -> .)

    np_addVariableToStack          shift and go to state 27

state 21

    (1) program -> PROGRAM ID np_program SEMICOLON variables functions MAIN . np_main L_PAREN R_PAREN block np_endProgram empty
    (94) np_main -> .

    L_PAREN         reduce using rule 94 (np_main -> .)

    np_main                        shift and go to state 30

state 22

    (11) functionsU -> func_type FUNCTION . ID np_addFunction L_PAREN receive_params R_PAREN variables block np_endFunction functionsD

    ID              shift and go to state 31


state 23

    (14) func_type -> INT empty .

    FUNCTION        reduce using rule 14 (func_type -> INT empty .)


state 24

    (15) func_type -> FLOAT empty .

    FUNCTION        reduce using rule 15 (func_type -> FLOAT empty .)


state 25

    (16) func_type -> CHAR empty .

    FUNCTION        reduce using rule 16 (func_type -> CHAR empty .)


state 26

    (17) func_type -> VOID empty .

    FUNCTION        reduce using rule 17 (func_type -> VOID empty .)


state 27

    (6) variablesD -> ID np_addVariableToStack . COMA variablesD

    COMA            shift and go to state 32


state 28

    (7) variablesD -> ID COLON . var_type np_addVariable SEMICOLON variablesU
    (18) var_type -> . INT empty
    (19) var_type -> . FLOAT empty
    (20) var_type -> . CHAR empty

    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    CHAR            shift and go to state 36

    var_type                       shift and go to state 33

state 29

    (8) variablesD -> ID L_BRACKET . INTVAL R_BRACKET COLON var_type np_addArray SEMICOLON variablesU

    INTVAL          shift and go to state 37


state 30

    (1) program -> PROGRAM ID np_program SEMICOLON variables functions MAIN np_main . L_PAREN R_PAREN block np_endProgram empty

    L_PAREN         shift and go to state 38


state 31

    (11) functionsU -> func_type FUNCTION ID . np_addFunction L_PAREN receive_params R_PAREN variables block np_endFunction functionsD
    (92) np_addFunction -> .

    L_PAREN         reduce using rule 92 (np_addFunction -> .)

    np_addFunction                 shift and go to state 39

state 32

    (6) variablesD -> ID np_addVariableToStack COMA . variablesD
    (6) variablesD -> . ID np_addVariableToStack COMA variablesD
    (7) variablesD -> . ID COLON var_type np_addVariable SEMICOLON variablesU
    (8) variablesD -> . ID L_BRACKET INTVAL R_BRACKET COLON var_type np_addArray SEMICOLON variablesU

    ID              shift and go to state 20

    variablesD                     shift and go to state 40

state 33

    (7) variablesD -> ID COLON var_type . np_addVariable SEMICOLON variablesU
    (95) np_addVariable -> .

    SEMICOLON       reduce using rule 95 (np_addVariable -> .)

    np_addVariable                 shift and go to state 41

state 34

    (18) var_type -> INT . empty
    (89) empty -> .

    SEMICOLON       reduce using rule 89 (empty -> .)
    COMA            reduce using rule 89 (empty -> .)
    R_PAREN         reduce using rule 89 (empty -> .)

    empty                          shift and go to state 42

state 35

    (19) var_type -> FLOAT . empty
    (89) empty -> .

    SEMICOLON       reduce using rule 89 (empty -> .)
    COMA            reduce using rule 89 (empty -> .)
    R_PAREN         reduce using rule 89 (empty -> .)

    empty                          shift and go to state 43

state 36

    (20) var_type -> CHAR . empty
    (89) empty -> .

    SEMICOLON       reduce using rule 89 (empty -> .)
    COMA            reduce using rule 89 (empty -> .)
    R_PAREN         reduce using rule 89 (empty -> .)

    empty                          shift and go to state 44

state 37

    (8) variablesD -> ID L_BRACKET INTVAL . R_BRACKET COLON var_type np_addArray SEMICOLON variablesU

    R_BRACKET       shift and go to state 45


state 38

    (1) program -> PROGRAM ID np_program SEMICOLON variables functions MAIN np_main L_PAREN . R_PAREN block np_endProgram empty

    R_PAREN         shift and go to state 46


state 39

    (11) functionsU -> func_type FUNCTION ID np_addFunction . L_PAREN receive_params R_PAREN variables block np_endFunction functionsD

    L_PAREN         shift and go to state 47


state 40

    (6) variablesD -> ID np_addVariableToStack COMA variablesD .

    INT             reduce using rule 6 (variablesD -> ID np_addVariableToStack COMA variablesD .)
    FLOAT           reduce using rule 6 (variablesD -> ID np_addVariableToStack COMA variablesD .)
    CHAR            reduce using rule 6 (variablesD -> ID np_addVariableToStack COMA variablesD .)
    VOID            reduce using rule 6 (variablesD -> ID np_addVariableToStack COMA variablesD .)
    MAIN            reduce using rule 6 (variablesD -> ID np_addVariableToStack COMA variablesD .)
    L_BRACE         reduce using rule 6 (variablesD -> ID np_addVariableToStack COMA variablesD .)


state 41

    (7) variablesD -> ID COLON var_type np_addVariable . SEMICOLON variablesU

    SEMICOLON       shift and go to state 48


state 42

    (18) var_type -> INT empty .

    SEMICOLON       reduce using rule 18 (var_type -> INT empty .)
    COMA            reduce using rule 18 (var_type -> INT empty .)
    R_PAREN         reduce using rule 18 (var_type -> INT empty .)


state 43

    (19) var_type -> FLOAT empty .

    SEMICOLON       reduce using rule 19 (var_type -> FLOAT empty .)
    COMA            reduce using rule 19 (var_type -> FLOAT empty .)
    R_PAREN         reduce using rule 19 (var_type -> FLOAT empty .)


state 44

    (20) var_type -> CHAR empty .

    SEMICOLON       reduce using rule 20 (var_type -> CHAR empty .)
    COMA            reduce using rule 20 (var_type -> CHAR empty .)
    R_PAREN         reduce using rule 20 (var_type -> CHAR empty .)


state 45

    (8) variablesD -> ID L_BRACKET INTVAL R_BRACKET . COLON var_type np_addArray SEMICOLON variablesU

    COLON           shift and go to state 49


state 46

    (1) program -> PROGRAM ID np_program SEMICOLON variables functions MAIN np_main L_PAREN R_PAREN . block np_endProgram empty
    (29) block -> . L_BRACE blockU R_BRACE empty

    L_BRACE         shift and go to state 51

    block                          shift and go to state 50

state 47

    (11) functionsU -> func_type FUNCTION ID np_addFunction L_PAREN . receive_params R_PAREN variables block np_endFunction functionsD
    (21) receive_params -> . ID COLON var_type np_receiveParams receive_paramsD empty
    (22) receive_params -> . empty
    (89) empty -> .

    ID              shift and go to state 52
    R_PAREN         reduce using rule 89 (empty -> .)

    receive_params                 shift and go to state 53
    empty                          shift and go to state 54

state 48

    (7) variablesD -> ID COLON var_type np_addVariable SEMICOLON . variablesU
    (4) variablesU -> . variablesD
    (5) variablesU -> . empty
    (6) variablesD -> . ID np_addVariableToStack COMA variablesD
    (7) variablesD -> . ID COLON var_type np_addVariable SEMICOLON variablesU
    (8) variablesD -> . ID L_BRACKET INTVAL R_BRACKET COLON var_type np_addArray SEMICOLON variablesU
    (89) empty -> .

    ID              shift and go to state 20
    INT             reduce using rule 89 (empty -> .)
    FLOAT           reduce using rule 89 (empty -> .)
    CHAR            reduce using rule 89 (empty -> .)
    VOID            reduce using rule 89 (empty -> .)
    MAIN            reduce using rule 89 (empty -> .)
    L_BRACE         reduce using rule 89 (empty -> .)

    variablesU                     shift and go to state 55
    variablesD                     shift and go to state 18
    empty                          shift and go to state 19

state 49

    (8) variablesD -> ID L_BRACKET INTVAL R_BRACKET COLON . var_type np_addArray SEMICOLON variablesU
    (18) var_type -> . INT empty
    (19) var_type -> . FLOAT empty
    (20) var_type -> . CHAR empty

    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    CHAR            shift and go to state 36

    var_type                       shift and go to state 56

state 50

    (1) program -> PROGRAM ID np_program SEMICOLON variables functions MAIN np_main L_PAREN R_PAREN block . np_endProgram empty
    (91) np_endProgram -> .

    $end            reduce using rule 91 (np_endProgram -> .)

    np_endProgram                  shift and go to state 57

state 51

    (29) block -> L_BRACE . blockU R_BRACE empty
    (30) blockU -> . statement blockD np_emptyStacks empty
    (31) blockU -> . empty
    (34) statement -> . assignment SEMICOLON empty
    (35) statement -> . call np_isStatement SEMICOLON empty
    (36) statement -> . return SEMICOLON empty
    (37) statement -> . read SEMICOLON empty
    (38) statement -> . write SEMICOLON empty
    (39) statement -> . decision empty
    (40) statement -> . conditional empty
    (41) statement -> . non_conditional empty
    (42) statement -> . empty
    (89) empty -> .
    (43) assignment -> . ID np_addID EQUAL np_addOperator hyper_exp np_assignment empty
    (44) assignment -> . ID L_BRACKET np_fakeBottom hyper_exp R_BRACKET np_addArrayID EQUAL np_addOperator hyper_exp np_assignment empty
    (45) call -> . ID np_call_era L_PAREN send_params np_paramValidation R_PAREN np_call_gosub empty
    (46) return -> . RETURN L_PAREN hyper_exp np_return R_PAREN empty
    (47) read -> . READ L_PAREN ID np_read R_PAREN empty
    (48) write -> . WRITE L_PAREN writeD R_PAREN empty
    (51) decision -> . IF L_PAREN hyper_exp R_PAREN np_startDecision THEN block decisionU np_endDecision empty
    (54) conditional -> . WHILE L_PAREN np_conditionalBefore hyper_exp np_conditionalDuring R_PAREN DO block np_conditionalAfter empty
    (55) non_conditional -> . FROM L_PAREN for_assignment R_PAREN TO hyper_exp np_boolFor DO block np_endCondition empty

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FROM resolved as shift
    R_BRACE         reduce using rule 89 (empty -> .)
    ID              shift and go to state 69
    RETURN          shift and go to state 70
    READ            shift and go to state 71
    WRITE           shift and go to state 72
    IF              shift and go to state 73
    WHILE           shift and go to state 74
    FROM            shift and go to state 75

  ! ID              [ reduce using rule 89 (empty -> .) ]
  ! RETURN          [ reduce using rule 89 (empty -> .) ]
  ! READ            [ reduce using rule 89 (empty -> .) ]
  ! WRITE           [ reduce using rule 89 (empty -> .) ]
  ! IF              [ reduce using rule 89 (empty -> .) ]
  ! WHILE           [ reduce using rule 89 (empty -> .) ]
  ! FROM            [ reduce using rule 89 (empty -> .) ]

    blockU                         shift and go to state 58
    empty                          shift and go to state 59
    statement                      shift and go to state 60
    assignment                     shift and go to state 61
    call                           shift and go to state 62
    return                         shift and go to state 63
    read                           shift and go to state 64
    write                          shift and go to state 65
    decision                       shift and go to state 66
    conditional                    shift and go to state 67
    non_conditional                shift and go to state 68

state 52

    (21) receive_params -> ID . COLON var_type np_receiveParams receive_paramsD empty

    COLON           shift and go to state 76


state 53

    (11) functionsU -> func_type FUNCTION ID np_addFunction L_PAREN receive_params . R_PAREN variables block np_endFunction functionsD

    R_PAREN         shift and go to state 77


state 54

    (22) receive_params -> empty .

    R_PAREN         reduce using rule 22 (receive_params -> empty .)


state 55

    (7) variablesD -> ID COLON var_type np_addVariable SEMICOLON variablesU .

    INT             reduce using rule 7 (variablesD -> ID COLON var_type np_addVariable SEMICOLON variablesU .)
    FLOAT           reduce using rule 7 (variablesD -> ID COLON var_type np_addVariable SEMICOLON variablesU .)
    CHAR            reduce using rule 7 (variablesD -> ID COLON var_type np_addVariable SEMICOLON variablesU .)
    VOID            reduce using rule 7 (variablesD -> ID COLON var_type np_addVariable SEMICOLON variablesU .)
    MAIN            reduce using rule 7 (variablesD -> ID COLON var_type np_addVariable SEMICOLON variablesU .)
    L_BRACE         reduce using rule 7 (variablesD -> ID COLON var_type np_addVariable SEMICOLON variablesU .)


state 56

    (8) variablesD -> ID L_BRACKET INTVAL R_BRACKET COLON var_type . np_addArray SEMICOLON variablesU
    (97) np_addArray -> .

    SEMICOLON       reduce using rule 97 (np_addArray -> .)

    np_addArray                    shift and go to state 78

state 57

    (1) program -> PROGRAM ID np_program SEMICOLON variables functions MAIN np_main L_PAREN R_PAREN block np_endProgram . empty
    (89) empty -> .

    $end            reduce using rule 89 (empty -> .)

    empty                          shift and go to state 79

state 58

    (29) block -> L_BRACE blockU . R_BRACE empty

    R_BRACE         shift and go to state 80


state 59

    (31) blockU -> empty .
    (42) statement -> empty .

  ! reduce/reduce conflict for R_BRACE resolved using rule 31 (blockU -> empty .)
    R_BRACE         reduce using rule 31 (blockU -> empty .)
    ID              reduce using rule 42 (statement -> empty .)
    RETURN          reduce using rule 42 (statement -> empty .)
    READ            reduce using rule 42 (statement -> empty .)
    WRITE           reduce using rule 42 (statement -> empty .)
    IF              reduce using rule 42 (statement -> empty .)
    WHILE           reduce using rule 42 (statement -> empty .)
    FROM            reduce using rule 42 (statement -> empty .)

  ! R_BRACE         [ reduce using rule 42 (statement -> empty .) ]


state 60

    (30) blockU -> statement . blockD np_emptyStacks empty
    (32) blockD -> . blockU empty
    (33) blockD -> . empty
    (30) blockU -> . statement blockD np_emptyStacks empty
    (31) blockU -> . empty
    (89) empty -> .
    (34) statement -> . assignment SEMICOLON empty
    (35) statement -> . call np_isStatement SEMICOLON empty
    (36) statement -> . return SEMICOLON empty
    (37) statement -> . read SEMICOLON empty
    (38) statement -> . write SEMICOLON empty
    (39) statement -> . decision empty
    (40) statement -> . conditional empty
    (41) statement -> . non_conditional empty
    (42) statement -> . empty
    (43) assignment -> . ID np_addID EQUAL np_addOperator hyper_exp np_assignment empty
    (44) assignment -> . ID L_BRACKET np_fakeBottom hyper_exp R_BRACKET np_addArrayID EQUAL np_addOperator hyper_exp np_assignment empty
    (45) call -> . ID np_call_era L_PAREN send_params np_paramValidation R_PAREN np_call_gosub empty
    (46) return -> . RETURN L_PAREN hyper_exp np_return R_PAREN empty
    (47) read -> . READ L_PAREN ID np_read R_PAREN empty
    (48) write -> . WRITE L_PAREN writeD R_PAREN empty
    (51) decision -> . IF L_PAREN hyper_exp R_PAREN np_startDecision THEN block decisionU np_endDecision empty
    (54) conditional -> . WHILE L_PAREN np_conditionalBefore hyper_exp np_conditionalDuring R_PAREN DO block np_conditionalAfter empty
    (55) non_conditional -> . FROM L_PAREN for_assignment R_PAREN TO hyper_exp np_boolFor DO block np_endCondition empty

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FROM resolved as shift
    R_BRACE         reduce using rule 89 (empty -> .)
    ID              shift and go to state 69
    RETURN          shift and go to state 70
    READ            shift and go to state 71
    WRITE           shift and go to state 72
    IF              shift and go to state 73
    WHILE           shift and go to state 74
    FROM            shift and go to state 75

  ! ID              [ reduce using rule 89 (empty -> .) ]
  ! RETURN          [ reduce using rule 89 (empty -> .) ]
  ! READ            [ reduce using rule 89 (empty -> .) ]
  ! WRITE           [ reduce using rule 89 (empty -> .) ]
  ! IF              [ reduce using rule 89 (empty -> .) ]
  ! WHILE           [ reduce using rule 89 (empty -> .) ]
  ! FROM            [ reduce using rule 89 (empty -> .) ]
